{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 94,
  "lineage": "0ab6facf-97d9-ca4c-0dfc-f15f986592fa",
  "resources": [
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039cdd0e4b4ecdca1",
            "association_id": "eipassoc-0d33b93c6bd60a28e",
            "domain": "vpc",
            "id": "eipalloc-039cdd0e4b4ecdca1",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-01e672d58db898f72",
            "private_dns": "ip-10-1-101-214.ca-central-1.compute.internal",
            "private_ip": "10.1.101.214",
            "public_dns": "ec2-3-98-255-210.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.98.255.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ep-runner-vpc-ca-central-1a"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc-ca-central-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:internet-gateway/igw-057511e053b04a925",
            "id": "igw-057511e053b04a925",
            "owner_id": "152368484097",
            "tags": {
              "Name": "ep-runner-vpc"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc"
            },
            "vpc_id": "vpc-0de9193fff8b5a748"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039cdd0e4b4ecdca1",
            "connectivity_type": "public",
            "id": "nat-0c0f8e46fcc73fdd2",
            "network_interface_id": "eni-01e672d58db898f72",
            "private_ip": "10.1.101.214",
            "public_ip": "3.98.255.210",
            "subnet_id": "subnet-07711a551ecba1f89",
            "tags": {
              "Name": "ep-runner-vpc-ca-central-1a"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc-ca-central-1a"
            }
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-058bc1498bd4dd0131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c0f8e46fcc73fdd2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058bc1498bd4dd013",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_nat_gateway.this",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057511e053b04a925",
            "id": "r-rtb-07e39d894d9764e6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e39d894d9764e6a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:route-table/rtb-058bc1498bd4dd013",
            "id": "rtb-058bc1498bd4dd013",
            "owner_id": "152368484097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0f8e46fcc73fdd2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ep-runner-vpc-private"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de9193fff8b5a748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:route-table/rtb-07e39d894d9764e6a",
            "id": "rtb-07e39d894d9764e6a",
            "owner_id": "152368484097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057511e053b04a925",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ep-runner-vpc-public"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de9193fff8b5a748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057757651a0ced9ee",
            "route_table_id": "rtb-058bc1498bd4dd013",
            "subnet_id": "subnet-060cdb920e8c3df22"
          },
          "dependencies": [
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7ad08d6985005d7",
            "route_table_id": "rtb-07e39d894d9764e6a",
            "subnet_id": "subnet-07711a551ecba1f89"
          },
          "dependencies": [
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:subnet/subnet-060cdb920e8c3df22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060cdb920e8c3df22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152368484097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ep-runner-vpc-private-ca-central-1a"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc-private-ca-central-1a"
            },
            "vpc_id": "vpc-0de9193fff8b5a748"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:subnet/subnet-07711a551ecba1f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07711a551ecba1f89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152368484097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ep-runner-vpc-public-ca-central-1a"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc-public-ca-central-1a"
            },
            "vpc_id": "vpc-0de9193fff8b5a748"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:vpc/vpc-0de9193fff8b5a748",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c8b52be42e0c754d",
            "default_route_table_id": "rtb-0b9aefafa34e3d6e6",
            "default_security_group_id": "sg-09a3392b2fd7cc612",
            "dhcp_options_id": "dopt-69e2e201",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de9193fff8b5a748",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9aefafa34e3d6e6",
            "owner_id": "152368484097",
            "tags": {
              "Name": "ep-runner-vpc"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.runners.module.runners",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:security-group/sg-0d94c9e07c8bebfeb",
            "description": "Github Actions Runner security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d94c9e07c8bebfeb",
            "ingress": [],
            "name": "ep-runner-github-actions-runner-sg20230117184647250000000005",
            "name_prefix": "ep-runner-github-actions-runner-sg",
            "owner_id": "152368484097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ep-runner-action-runner",
              "Project": "ep-runner",
              "ghr:environment": "ep-runner",
              "ghr:ssm_config_path": "/github-action-runners/ep-runner/runners/config"
            },
            "tags_all": {
              "Example": "ep-runner",
              "Name": "ep-runner-action-runner",
              "Project": "ep-runner",
              "ghr:environment": "ep-runner",
              "ghr:ssm_config_path": "/github-action-runners/ep-runner/runners/config"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de9193fff8b5a748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.base.module.vpc.aws_customer_gateway.this",
            "module.base.module.vpc.aws_db_subnet_group.database",
            "module.base.module.vpc.aws_default_network_acl.this",
            "module.base.module.vpc.aws_default_route_table.default",
            "module.base.module.vpc.aws_default_security_group.this",
            "module.base.module.vpc.aws_default_vpc.this",
            "module.base.module.vpc.aws_egress_only_internet_gateway.this",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.base.module.vpc.aws_flow_log.this",
            "module.base.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.base.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.base.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_nat_gateway.this",
            "module.base.module.vpc.aws_network_acl.database",
            "module.base.module.vpc.aws_network_acl.elasticache",
            "module.base.module.vpc.aws_network_acl.intra",
            "module.base.module.vpc.aws_network_acl.outpost",
            "module.base.module.vpc.aws_network_acl.private",
            "module.base.module.vpc.aws_network_acl.public",
            "module.base.module.vpc.aws_network_acl.redshift",
            "module.base.module.vpc.aws_network_acl_rule.database_inbound",
            "module.base.module.vpc.aws_network_acl_rule.database_outbound",
            "module.base.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.base.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.base.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.base.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.base.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.base.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.base.module.vpc.aws_network_acl_rule.private_inbound",
            "module.base.module.vpc.aws_network_acl_rule.private_outbound",
            "module.base.module.vpc.aws_network_acl_rule.public_inbound",
            "module.base.module.vpc.aws_network_acl_rule.public_outbound",
            "module.base.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.base.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.base.module.vpc.aws_redshift_subnet_group.redshift",
            "module.base.module.vpc.aws_route.database_internet_gateway",
            "module.base.module.vpc.aws_route.database_ipv6_egress",
            "module.base.module.vpc.aws_route.database_nat_gateway",
            "module.base.module.vpc.aws_route.private_ipv6_egress",
            "module.base.module.vpc.aws_route.private_nat_gateway",
            "module.base.module.vpc.aws_route.public_internet_gateway",
            "module.base.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.base.module.vpc.aws_route_table.database",
            "module.base.module.vpc.aws_route_table.elasticache",
            "module.base.module.vpc.aws_route_table.intra",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_route_table.redshift",
            "module.base.module.vpc.aws_route_table_association.database",
            "module.base.module.vpc.aws_route_table_association.elasticache",
            "module.base.module.vpc.aws_route_table_association.intra",
            "module.base.module.vpc.aws_route_table_association.outpost",
            "module.base.module.vpc.aws_route_table_association.private",
            "module.base.module.vpc.aws_route_table_association.public",
            "module.base.module.vpc.aws_route_table_association.redshift",
            "module.base.module.vpc.aws_route_table_association.redshift_public",
            "module.base.module.vpc.aws_subnet.database",
            "module.base.module.vpc.aws_subnet.elasticache",
            "module.base.module.vpc.aws_subnet.intra",
            "module.base.module.vpc.aws_subnet.outpost",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_subnet.redshift",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_dhcp_options.this",
            "module.base.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.module.vpc.aws_vpn_gateway.this",
            "module.base.module.vpc.aws_vpn_gateway_attachment.this",
            "module.base.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.base.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.base.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.base.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.base.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    }
  ]
}